# pycrdt

./: .gitignore  Cargo-sticky-xml.toml  Cargo.toml  PUBLISHING-GUIDE.md  README.md  Setup.py  pyproject.toml
.github/workflows/: publish.yml
python/pycrdt/: __init__.py  _base.py  _pycrdt.pyi  _sticky_index.py  _text.py  _xml.py
src/: sticky_index.rs  xml.rs
tests/: test_xml.py
